<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="post_text">Post text</string>
    <string name="chooser_share_post">Share post</string>
    <string name="edit_message_text">Edit text</string>
    <string name="notification_user_liked">%1$s liked %2$s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s just published new post:</string>
    <string name="notification_new_post_text">%1$s</string>
    <string name="no_posts">No posts</string>
    <string name="error_title">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="new_post">Create your new post</string>
    <string name="your_feed">Your feed</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_events">Events</string>
    <string name="menu_users">Users</string>
    <string name="no_response">Server is not responding. Please, swipe to refresh</string>
    <string name="no_response_like">Server is not responding. Please, try again</string>
    <string name="no_response_send_post">Couldn\'t send post to server. Please, try again</string>
    <string name="newer_posts">Show newer posts: </string>
    <string name="failed_photo">Failed to pick photo</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="select_avatar">Select avatar</string>
    <string name="authorization">Authorization</string>
    <string name="log_in">Log in</string>
    <string name="loading">Loading...</string>
    <string name="google_play_unavailable">Google Api Unavailable\n</string>
    <string name="user_wall">Wall</string>
    <string name="user_jobs">Jobs</string>
    <string name="add_job">Add job</string>
    <string name="event_online">Online</string>
    <string name="event_offline">Offline</string>
    <string name="menu_my_profile">My profile</string>
    <string name="event_type_online">Online event</string>
    <string name="event_type_offline">Offline event</string>
    <string name="author_job_searching">Looking for work</string>
    <string name="select_event_datetime">Date and time</string>
    <string name="select_location">Location on map</string>
    <string name="select_speakers">Speakers</string>
    <string name="post_link_hint">Link (for online)</string>
    <string name="author_job_label">Author job</string>
    <string name="event_participants">Participants</string>
    <string name="event_speakers">Speakers</string>
    <string name="open_on_map">Open on map</string>
    <string name="post_mentions">Mentions</string>
    <string name="edit_event">Edit event</string>
    <string name="new_event">New event</string>
    <string name="attachment_too_large">Attachment must not exceed 15 MB</string>
    <string name="location_not_implemented">Map picker will be added in a future version</string>
    <string name="speakers_selected">Selected: %1$d</string>
    <string name="event_validation_error">Enter text and date/time of the event</string>
    <string name="auth_required_title">Sign in</string>
    <string name="auth_required_message">Create an account or sign in to continue</string>
    <string name="snackbar_sign_in_required">Sign in to continue</string>
    <string name="post_comments_title">Comments</string>
    <string name="comments_empty">No comments yet</string>
    <string name="comments_endpoint_unavailable">Comments are not available on this server</string>
    <string name="hint_write_comment">Your comment</string>
    <string name="send_comment">Send</string>
    <string name="no_events">No events yet</string>
    <string name="location_coords_set">Location: %1$.5f, %2$.5f</string>
    <string name="location_lat_hint">Latitude (decimal)</string>
    <string name="location_lon_hint">Longitude (decimal)</string>
    <string name="invalid_coordinates">Enter valid latitude and longitude</string>
    <string name="location_clear">Clear location</string>

</resources>