<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/new_event_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="?actionBarSize">

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/post_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_margin"
                android:textColorHint="@color/hint_color"
                tools:text="@tools:sample/lorem[150]" />

            <RadioGroup
                android:id="@+id/type_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/common_margin">

                <RadioButton
                    android:id="@+id/type_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/event_online" />

                <RadioButton
                    android:id="@+id/type_offline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_margin"
                    android:text="@string/event_offline" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_button"
                style="@style/Widget.AnStEducation.Button.Tonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:text="@string/select_event_datetime" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/location_button"
                style="@style/Widget.AnStEducation.Button.Tonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:text="@string/select_location" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speakers_button"
                style="@style/Widget.AnStEducation.Button.Tonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:text="@string/select_speakers" />

            <EditText
                android:id="@+id/link_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:hint="@string/post_link_hint"
                android:inputType="textUri" />

            <FrameLayout
                android:id="@+id/previewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    style="@style/Widget.AnStEducation.Button.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/menu_remove"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="?colorSurface"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_photo"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_photo_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_camera"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_camera_24dp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

